# tamago

./: .gitignore  CHANGELOG.md  Makefile  README.md  hatch_build.py  local.toml.example  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: analyze_tpm.py  curate_tlg_samples.py  extract_tlg_samples.py  extract_trial_zips.py  identify_encryption.py  survey_engines.py  survey_installed_games.py  survey_tlg_samples.py
src/tamago/: cli.py
src/tamago/formats/advhd/: __init__.py  arcfile.py  handler.py
src/tamago/formats/det/: __init__.py  detfile.py  handler.py
src/tamago/formats/gsp/: __init__.py  gspfile.py  handler.py  spt_crypto.py
src/tamago/formats/livemaker/: crypto.py  dostime.py  gale.py  handler.py  vffile.py
src/tamago/formats/xp3/: __init__.py  _tlg_accel.c  detect.py  encryption_library.toml  handler.py  models.py  simple_crypt.py  tlg.py  unencrypted_library.toml  xp3file.py
src/tamago/formats/xp3/encryption/: __init__.py  base.py  cxcrypt.py  fixed_xor.py  hash_derived.py  hash_xor.py  null.py  pinpoint.py
src/tamago/tests/: test_cli.py
src/tamago/tests/advhd/: test_arcfile.py  test_lzss.py
src/tamago/tests/det/: test_compress.py  test_decompress.py  test_detfile.py  test_nonfree.py
src/tamago/tests/gsp/: test_gspfile.py  test_spt_crypto.py
src/tamago/tests/livemaker/: test_crypto.py  test_dostime.py  test_gale.py  test_nonfree.py  test_vffile.py
src/tamago/tests/xp3/: test_cli.py  test_cxcrypt.py  test_detect.py  test_encryption.py  test_identify_encryption.py  test_models.py  test_nonfree.py  test_nonfree_roundtrip.py  test_nonfree_simple_crypt.py  test_nonfree_tlg.py  test_simple_crypt.py  test_tlg.py  test_xp3file.py
src/tamago/tests/xp3/samples/: cheshire_4x4.tlg  cheshire_4x4_tlg0.tlg  empty_file.xp3  encrypted_shift5_with_png.xp3  encrypted_with_png.xp3  multi_compressed.xp3  multi_encrypted.xp3  owari02.tlg  rabbit_4x2_lzss.tlg  red_2x2.tlg  single_compressed.xp3  single_encrypted_compressed.xp3  single_encrypted_uncompressed.xp3  single_uncompressed.xp3  transparent_2x2.tlg  with_tlg.xp3
